# qdata-adapter-kd-galaxy

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  QUICKSTART.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml
api-docs/: README.md
docs/: prompt.md
examples/: README.md  quickstart.py
reference/: .gitignore
src/qdata_adapter_kd_galaxy/: __init__.py  adapter.py  constants.py  exceptions.py
src/qdata_adapter_kd_galaxy/interfaces/: __init__.py  base.py  standard.py
tests/: conftest.py  e2e_test.py  test_adapter.py  test_e2e_extended.py
tests/data/: README.md
